practice3/k8s/service-booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  labels:
    app: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - name: http
      port: 8001
      targetPort: 8001
  type: ClusterIP
